fix to-do: https://basecamp.com/1759305/projects/19290-collectorsquest-com/todos/10806532-fixed-feedback wrappe input by label, remove extra classes

--- a/web/less/frontend/_forms.less
+++ b/web/less/frontend/_forms.less
@@ -322,14 +322,3 @@ ul.alert-error {
 .blue-outline-comment-btn {
 	border-color: @blue @blue @blue #ccc !important;
 }
-
-input.inputToLeft {
-	float: left; 
-	margin-top: 1px;
-}
-
-label.labelRightSide {
-	float: left; 
-	margin-left: 5px;
-}
-
